--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Philip R. Bredsguard | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <h1>Philip R. Bredsguard | WDD 130</h1>
+    <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
+        Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest Airlines
+        based out of Bosie, ID.</p>
+    <img src="images/profile.jpg" alt="Philip R. Bredsguard" width="200">
+    <footer>
+        <p>&copy; 2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
+    </footer>
 </body>
+
 </html>
