--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
-    <h1>Philip R. Bredsguard | WDD 130</h1>
-    <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
-        Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest Airlines
-        based out of Bosie, ID.</p>
-    <img src="images/profile.jpg" alt="Philip R. Bredsguard" width="200">
+    <main>
+        <h1>Philip R. Bredsguard | WDD 130</h1>
+        <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
+            Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest
+            Airlines
+            based out of Bosie, ID.</p>
+        <img src="images/profile.jpg" alt="Philip R. Bredsguard" width="200">
+    </main>
     <footer>
         <p>&copy; 2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
     </footer>
