--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="images/profile.jpg" alt="Philip R. Bredsguard" width="200">
     </main>
     <footer>
-        <p>&copy; 2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
+        <p>©2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
     </footer>
 </body>
 
