--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     </header>
     <main>
         <h1>Philip R. Bredsguard | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Philip R. Bredsguard" width="200">
         <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
             Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest
-            Airlines
-            based out of Bosie, ID.</p>
+            Airlines based out of Bosie, ID.</p>
+        <img src="images/profile.jpg" alt="Phlip R. Bredsguard" width="200">
     </main>
     <footer>
         <p>©2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
