--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Philip Bredsguard">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Company Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li> <a href="//www.google.com/?client=safari&zx=1768403558651&no_sw_cr=1">Google</a>
+            </li>
+            <li> <a href="https://grok.com">Grok</a> </li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, rerum.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, repellendus.</p>
+        </section>
+        <aside>
+            <img
+              src="
+                  https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/1280x800/aba-nigeria-temple-lds-273999-wallpaper.jpg"
+              alt="Temple picture" width="200">
+        </aside>
+    </main>
+    <footer>
+        <p>Philip Bredsguard</p>
+    </footer>
 </body>
+
 </html>
