--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Philip R. Bredsguard | WDD 130</title>
+    <meta name="description" content="Philip Bredsguard's course hompage for WDD 130 at BYU-Idaho">
+    <meta name="author" content="Philip Bredsguard">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -21,6 +24,13 @@
             Airlines based out of Bosie, ID.</p>
         <img src="images/profile.jpg" alt="Phlip R. Bredsguard" width="200">
     </main>
+    <aside>
+        <h2>Florida</h2>
+        <img src="images/Florida.jpg" alt="Florida Beach">
+        <p>Florida is in the south east corner of the United States. Is has warm ocean currents that
+            come upo from the Carribean. It is warm all year round and is full of fun animal life.
+        </p>
+    </aside>
     <footer>
         <p>©2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
     </footer>
