--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
     <aside>
         <h2>Florida</h2>
-        <img src="images/florida.jpg" alt="Florida Beach">
+        <img src="images/florida-beach.jpg" alt="Florida Beach">
         <p>Florida is in the south east corner of the United States. Is has warm ocean currents that
             come upo from the Carribean. It is warm all year round and is full of fun animal life.
             It is also a great place to learn to fly.
