--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Philip R. Bredsguard | WDD 130</title>
-    <meta name="description" content="Philip Bredsguard's course hompage for WDD 130 at BYU-Idaho">
+    <meta name="description" content="Philip Bredsguard's course homepage for WDD 130 at BYU-Idaho">
     <meta name="author" content="Philip Bredsguard">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
