--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Whitefish White Water Rafting</title>
-    <meta name="description" content="Whitefish White Water Rafting's About Us webpage">
+    <meta name="description" content="Whitefish White Water Rafting's webpage titled About Us">
     <meta name="author" content="Philip Bredsguard">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -24,9 +24,7 @@
     </header>
     <main>
         <div class="hero">
-            <img
-              src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting16_1024.jpg"
-              alt="Birds Eye View of WWR">
+            <img src="images/rafting16_1024-2.jpg" alt="Birds Eye View of WWR">
             <h1>Whitefish White Water Rafting</h1>
             <article>
                 <img src="images/happy-camper.jpg" alt="Happy Employee">
