--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,14 +47,13 @@
         <p>© 2026 🏞️ Whitefish White Water Rafting 🛶 Philip Bredsguard</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com">
-                <img src="images/facebook-square.svg" alt="Facebook Logo" width="50px">
+                <img src="images/facebook-square.svg" alt="Facebook Logo">
             </a>
             <a href="https://x.com">
-                <img src="images/x-bw.svg" alt="X.com Logo" width="50px">
+                <img src="images/x-bw.svg" alt="X.com Logo">
             </a>
             <a href="https://www.instagram.com">
-                <img src="images/instagram-square.svg" alt="Instagram Logo" width="50px">
-            </a>
+                <img src="images/instagram-square.svg" alt="Instagram Logo">
         </nav>
     </footer>
 
