--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Whitefish White Water Rafting</title>
-    <meta name="description" content="Whitefish White Water Rafting's webpage titled About Us">
+    <meta name="description"
+      content="About Us the Whitefish White Water Rafting's webpage describing who we are">
     <meta name="author" content="Philip Bredsguard">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
