--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Whitefish White Water Rafting</title>
+    <title>About Us Whitefish White Water Rafting</title>
     <meta name="description"
       content="About Us the Whitefish White Water Rafting's webpage describing who we are">
     <meta name="author" content="Philip Bredsguard">
