--- a/index.html
+++ b/index.html
@@ -20,33 +20,39 @@
             <a href="https://www.facebook.com/philip.bredsguard/">Facebook Profile</a>
         </nav>
     </header>
-    <main>
-        <h1>Philip R. Bredsguard | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Phlip R. Bredsguard" width="200">
-        <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
-            Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest
-            Airlines based out of Bosie, ID. </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Accusamus officia laborum voluptas officiis repellat explicabo, tempore dolorum
-            esse ipsum laudantium asperiores. Aperiam eveniet consequatur vel nesciunt praesentium
-            expedita natus eius.</p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/twin-falls-idaho-temple?lang=eng"
-                  target="_blank">Twin Falls Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/pocatello-idaho-temple?lang=eng"
-                  target="_blank">Pocatello Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng"
-                  target="_blank">Idaho Falls Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Florida</h2>
-        <img src="images/florida-beach.jpg" alt="Vero Beach, Florida">
-        <p>Florida is in the south east corner of the United States. Is has warm ocean currents that
-            come upo from the Carribean. It is warm all year round and is full of fun animal life.
-            It is also a great place to learn to fly.
-        </p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Philip R. Bredsguard | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Phlip R. Bredsguard" width="200">
+            <p>I currently live in Vero Beach, FL with my wife and two young children. I am a Flight
+                Instructor at Skyborne Airline Academy. I hope to one day be a Captain at SkyWest
+                Airlines based out of Bosie, ID. </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Accusamus officia laborum voluptas officiis repellat explicabo, tempore
+                dolorum
+                esse ipsum laudantium asperiores. Aperiam eveniet consequatur vel nesciunt
+                praesentium
+                expedita natus eius.</p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/twin-falls-idaho-temple?lang=eng"
+                      target="_blank">Twin Falls Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/pocatello-idaho-temple?lang=eng"
+                      target="_blank">Pocatello Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng"
+                      target="_blank">Idaho Falls Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Florida</h2>
+            <img src="images/florida-beach.jpg" alt="Vero Beach, Florida">
+            <p>Florida is in the south east corner of the United States. Is has warm ocean currents
+                that
+                come upo from the Carribean. It is warm all year round and is full of fun animal
+                life.
+                It is also a great place to learn to fly.
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>©2026 🏝️ Philip R. Bredsguard 🇺🇸 Florida, USA</p>
     </footer>
