--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 life.
                 It is also a great place to learn to fly.
             </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero laudantium est
+                repellat porro odio iure facere, officiis quasi quibusdam dolorem vel consequatur
+                numquam quis debitis aperiam. Illum quod repellat doloremque cupiditate! Sunt,
+                veniam quis. Eveniet quam ullam asperiores dignissimos maiores esse consequuntur.
+                Quaerat quidem quae aliquam iure vitae provident inventore!</p>
         </aside>
     </div>
     <footer>
