--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <img src="images/logo.jpg" alt="Company Logo">
+        <img class="toplogo" src="images/logo.jpg" alt="Company Logo">
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -34,14 +34,38 @@
                     vero voluptatem quis consectetur pariatur ut, tempora quo id nisi.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ratione, dolores maxime
                 tenetur unde temporibus. Quos numquam quae laudantium culpa aspernatur eius
                 molestiae consectetur vitae, quod expedita repellendus at. Expedita.</p>
+            <img src="images/jackalope-west.jpg" alt="Rafting Team">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ratione, dolores maxime
+                tenetur unde temporibus. Quos numquam quae laudantium culpa aspernatur eius
+                molestiae consectetur vitae, quod expedita repellendus at. Expedita.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/rafting65_600-2.jpg" alt="Whitefish River">
+                <figcaption>Whitefish River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting4_600.jpg" alt="Los Dientes del Diablo">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting15_1024.jpg" alt="Big Mallard">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting59_600.jpg" alt="Half Day Adventure">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting58_600.jpg" alt="Flathead River">
+                <figcaption>Flathead River</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
