--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,7 +47,7 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="images/rafting65_600-2.jpg" alt="Whitefish River">
+                <img src="images/fix1.jpg" alt="Whitefish River">
                 <figcaption>Whitefish River</figcaption>
             </figure>
             <figure>
@@ -55,7 +55,7 @@
                 <figcaption>Los Dientes del Diablo</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting15_1024.jpg" alt="Big Mallard">
+                <img src="images/fix2.jpg" alt="Big Mallard">
                 <figcaption>Big Mallard</figcaption>
             </figure>
             <figure>
