--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
     <main>
         <!-- Company Info + Map Section -->
         <section class="contact-info">
-            <h1>Contact Us</h1>
+            <h1>Whitefish White Water Rafting</h1>
 
             <address>
                 123 Main River Street<br>
