--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,13 +58,16 @@
                 <fieldset>
                     <legend>Purpose of Message:</legend>
                     <label>
-                        <input type="radio" name="purpose" value="general" checked> General Inquiry
+                        <input type="radio" id="purpose" name="purpose" value="general" checked>
+                        General Inquiry
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="reservation"> Reservation Question
+                        <input type="radio" id="purpose" name="purpose" value="reservation">
+                        Reservation Question
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="suggestion"> Website Suggestion
+                        <input type="radio" id="purpose" name="purpose" value="suggestion"> Website
+                        Suggestion
                     </label>
                 </fieldset>
 
@@ -73,7 +76,8 @@
                   required></textarea>
 
                 <label>
-                    <input type="checkbox" name="subscribe"> Please subscribe me to the monthly
+                    <input type="checkbox" id="subscribe" name="subscribe"> Please subscribe me to
+                    the monthly
                     newsletter
                 </label>
 
