--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,6 @@
         </nav>
     </header>
     <main>
-        <!-- Company Info + Map Section -->
         <section class="contact-info">
             <h1>Whitefish White Water Rafting</h1>
 
@@ -35,8 +34,6 @@
                 <a
                   href="mailto:info@whitefishwhitewaterrafting.com">info@whitefishwhitewaterrafting.com</a>
             </address>
-
-            <!-- Embedded Google Map (remove inline style="border:0;" as instructed) -->
             <div class="map-container">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215542.52412419295!2d-114.53311380702434!3d48.42965265937803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536669ab14afecb5%3A0xccca7a6b8837463e!2sWhitefish%2C%20MT%2059937!5e1!3m2!1sen!2sus!4v1770503655339!5m2!1sen!2sus"
@@ -44,10 +41,8 @@
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
-
-        <!-- Contact Form -->
         <section class="contact-form">
-            <form action="#" method="post"> <!-- Use a real endpoint later if needed -->
+            <form action="#" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="John Doe" required>
 
@@ -84,24 +79,21 @@
                 <button type="submit">Get in Touch!</button>
             </form>
         </section>
-
-        <!-- Employee Profiles (at least 3) -->
         <section class="team">
             <h2>We Are Here to Serve You</h2>
             <div class="employee-grid">
                 <figure>
-                    <img src="images/employee1.jpg" alt="Employee Name">
+                    <img src="images/employee1.jpg" alt="Ethan Fine">
                     <figcaption>Guide / Trip Leader</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Employee Name">
+                    <img src="images/employee2.jpg" alt="Justin Smith">
                     <figcaption>Safety Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpg" alt="Employee Name">
+                    <img src="images/employee3.jpg" alt="Benjamin Rush">
                     <figcaption>Office Manager</figcaption>
                 </figure>
-                <!-- Add more if desired -->
             </div>
         </section>
     </main>
