--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,15 +53,18 @@
                 <fieldset>
                     <legend>Purpose of Message:</legend>
                     <label>
-                        <input type="radio" id="purpose" name="purpose" value="general" checked>
+                        <input type="radio" id="purpose-general" name="purpose-general"
+                          value="general" checked>
                         General Inquiry
                     </label>
                     <label>
-                        <input type="radio" id="purpose" name="purpose" value="reservation">
+                        <input type="radio" id="purpose-reservation" name="purpose-reservation"
+                          value="reservation">
                         Reservation Question
                     </label>
                     <label>
-                        <input type="radio" id="purpose" name="purpose" value="suggestion"> Website
+                        <input type="radio" id="purpose-suggestion" name="purpose-suggestion"
+                          value="suggestion"> Website
                         Suggestion
                     </label>
                 </fieldset>
