--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,45 +42,48 @@
             </div>
         </section>
         <section class="contact-form">
-            <form action="#" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="John Doe" required>
+            <div>
+                <form action="#" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="John Doe" required>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="johndoe@email.com"
-                  required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="johndoe@email.com"
+                      required>
 
-                <fieldset>
-                    <legend>Purpose of Message:</legend>
+                    <fieldset>
+                        <legend>Purpose of Message:</legend>
+                        <label>
+                            <input type="radio" id="purpose-general" name="purpose-general"
+                              value="general" checked>
+                            General Inquiry
+                        </label>
+                        <label>
+                            <input type="radio" id="purpose-reservation" name="purpose-reservation"
+                              value="reservation">
+                            Reservation Question
+                        </label>
+                        <label>
+                            <input type="radio" id="purpose-suggestion" name="purpose-suggestion"
+                              value="suggestion"> Website
+                            Suggestion
+                        </label>
+                    </fieldset>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="6" placeholder="Type here"
+                      required></textarea>
+
                     <label>
-                        <input type="radio" id="purpose-general" name="purpose-general"
-                          value="general" checked>
-                        General Inquiry
+                        <input type="checkbox" id="subscribe" name="subscribe"> Please subscribe me
+                        to
+                        the monthly
+                        newsletter
                     </label>
-                    <label>
-                        <input type="radio" id="purpose-reservation" name="purpose-reservation"
-                          value="reservation">
-                        Reservation Question
-                    </label>
-                    <label>
-                        <input type="radio" id="purpose-suggestion" name="purpose-suggestion"
-                          value="suggestion"> Website
-                        Suggestion
-                    </label>
-                </fieldset>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="6" placeholder="Type here"
-                  required></textarea>
-
-                <label>
-                    <input type="checkbox" id="subscribe" name="subscribe"> Please subscribe me to
-                    the monthly
-                    newsletter
-                </label>
-
-                <button type="submit">Get in Touch!</button>
-            </form>
+                    <button type="submit">Get in Touch!</button>
+                </form>
+            </div>
         </section>
         <section class="team">
             <h2>We Are Here to Serve You</h2>
