--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,25 +24,32 @@
         </nav>
     </header>
     <main>
-        <section class="contact-info">
-            <h1>Whitefish White Water Rafting</h1>
+        <!-- Wrap the side-by-side parts in a container for better control -->
+        <div class="contact-container">
+            <section class="contact-info">
+                <h1>Whitefish White Water Rafting</h1>
 
-            <address>
-                123 Main River Street<br>
-                Whitefish, Montana<br>
-                +1 (999) 999-9999<br>
-                <a
-                  href="mailto:info@whitefishwhitewaterrafting.com">info@whitefishwhitewaterrafting.com</a>
-            </address>
-            <div class="map-container">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215542.52412419295!2d-114.53311380702434!3d48.42965265937803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536669ab14afecb5%3A0xccca7a6b8837463e!2sWhitefish%2C%20MT%2059937!5e1!3m2!1sen!2sus!4v1770503655339!5m2!1sen!2sus"
-                  width="600" height="450" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </section>
-        <section class="contact-form">
-            <div>
+                <address>
+                    123 Main River Street<br>
+                    Whitefish, Montana<br>
+                    +1 (999) 999-9999<br>
+                    <a
+                      href="mailto:info@whitefishwhitewaterrafting.com">info@whitefishwhitewaterrafting.com</a>
+                </address>
+
+                <div class="map-container">
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215542.52412419295!2d-114.53311380702434!3d48.42965265937803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536669ab14afecb5%3A0xccca7a6b8837463e!2sWhitefish%2C%20MT%2059937!5e1!3m2!1sen!2sus!4v1770503655339!5m2!1sen!2sus"
+                      width="100%" height="340" style="border:0;" allowfullscreen="" loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </section>
+
+            <section class="contact-form">
+                <h2>Send Us a Message</h2>
+                <!-- Add this for better semantics & to match "Get in Touch!" feel -->
+
                 <form action="#" method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="John Doe" required>
@@ -53,20 +60,22 @@
 
                     <fieldset>
                         <legend>Purpose of Message:</legend>
+
+                        <!-- FIX: All radios MUST share the SAME name="purpose" -->
                         <label>
-                            <input type="radio" id="purpose-general" name="purpose-general"
-                              value="general" checked>
+                            <input type="radio" id="purpose-general" name="purpose" value="general"
+                              checked>
                             General Inquiry
                         </label>
                         <label>
-                            <input type="radio" id="purpose-reservation" name="purpose-reservation"
+                            <input type="radio" id="purpose-reservation" name="purpose"
                               value="reservation">
                             Reservation Question
                         </label>
                         <label>
-                            <input type="radio" id="purpose-suggestion" name="purpose-suggestion"
-                              value="suggestion"> Website
-                            Suggestion
+                            <input type="radio" id="purpose-suggestion" name="purpose"
+                              value="suggestion">
+                            Website Suggestion
                         </label>
                     </fieldset>
 
@@ -74,17 +83,15 @@
                     <textarea id="message" name="message" rows="6" placeholder="Type here"
                       required></textarea>
 
-                    <label>
-                        <input type="checkbox" id="subscribe" name="subscribe"> Please subscribe me
-                        to
-                        the monthly
-                        newsletter
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="subscribe" name="subscribe">
+                        Please subscribe me to the monthly newsletter
                     </label>
 
                     <button type="submit">Get in Touch!</button>
                 </form>
-            </div>
-        </section>
+            </section>
+        </div>
         <section class="team">
             <h2>We Are Here to Serve You</h2>
             <div class="employee-grid">
