--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,17 +57,20 @@
 
                     <fieldset>
                         <legend>Purpose of Message:</legend>
-                        <label>
+
+                        <label for="purpose-general">
                             <input type="radio" id="purpose-general" name="purpose" value="general"
                               checked>
                             General Inquiry
                         </label>
-                        <label>
+
+                        <label for="purpose-reservation">
                             <input type="radio" id="purpose-reservation" name="purpose"
                               value="reservation">
                             Reservation Question
                         </label>
-                        <label>
+
+                        <label for="purpose-suggestion">
                             <input type="radio" id="purpose-suggestion" name="purpose"
                               value="suggestion">
                             Website Suggestion
@@ -78,7 +81,7 @@
                     <textarea id="message" name="message" rows="6" placeholder="Type here"
                       required></textarea>
 
-                    <label class="checkbox-label">
+                    <label for="subscribe" class="checkbox-label">
                         <input type="checkbox" id="subscribe" name="subscribe">
                         Please subscribe me to the monthly newsletter
                     </label>
