--- a/wwr/index.html
+++ b/wwr/index.html
@@ -37,12 +37,15 @@
         </div>
 
         <section class="history">
-            <h2>Why Choose Us?</h2>
-            <p>Our guides are certified experts with over 20 years of combined experience on the
-                Whitefish and Flathead rivers. We prioritize your safety and your smile.</p>
-            <img src="images/rafting-action.jpg" alt="Action Shot">
-            <p>We provide all the gear you need, from high-quality life jackets to
-                professional-grade rafts. Just bring your sense of adventure!</p>
+            <h2>Experience the Wild</h2>
+
+            <img src="images/rafting-purpose.jpg" alt="Team paddling through rapids">
+            <p>Our purpose is to connect you with the raw beauty of Montana's waterways. We
+                specialize in
+                guided tours that balance high-octane excitement with environmental appreciation,
+                ensuring
+                every guest leaves with a deeper respect for the river.</p>
+            <img src="images/rafting-gear.jpg" alt="Professional rafting equipment">
         </section>
 
         <section class="contact-form" style="width: 100%; max-width: 600px; margin: 2rem auto;">
