--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -6,38 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Trips | Whitefish White Water Rafting</title>
     <meta name="description"
-      content="Explore our variety of rafting trips, from half-day family floats to full-day adrenaline rushes in Montana.">
+      content="Choose your adventure with Whitefish White Water Rafting. We offer family floats, whitewater rushes, and overnight wilderness trips.">
     <meta name="author" content="Philip Bredsguard">
     <link rel="stylesheet" href="styles/rafting.css">
-    <style>
-        /* Specific styles for the Trips table */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 2rem 0;
-            background: white;
-        }
-
-        th,
-        td {
-            padding: 1rem;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-
-        th {
-            background-color: var(--secondary-color);
-            color: var(--primary-color);
-        }
-
-        .trip-cta {
-            text-align: center;
-            margin: 3rem 0;
-            padding: 2rem;
-            background: var(--secondary-color);
-            border-radius: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -52,28 +23,41 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <h1>River Adventures</h1>
 
-        <div class="adventure">
-            <figure>
-                <img src="images/trip1.jpg" alt="Half Day Float">
-                <figcaption><strong>The Family Float</strong><br>A 4-hour gentle ride perfect for
-                    all ages.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/trip2.jpg" alt="Full Day Thrill">
-                <figcaption><strong>The Whitewater Rush</strong><br>8 hours of Class III and IV
-                    rapids.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/trip3.jpg" alt="Overnight Trip">
-                <figcaption><strong>Overnight Wilderness</strong><br>Raft by day, camp under the
-                    stars by night.</figcaption>
-            </figure>
+        <div class="trip-cards">
+            <article class="card">
+                <img src="images/trip1.jpg" alt="The Family Float">
+                <div>
+                    <h3>The Family Float</h3>
+                    <p>A 4-hour gentle ride perfect for all ages. Enjoy the scenery without the
+                        stress.
+                    </p>
+                </div>
+            </article>
+
+            <article class="card">
+                <img src="images/trip2.jpg" alt="The Whitewater Rush">
+                <div>
+                    <h3>The Whitewater Rush</h3>
+                    <p>8 hours of Class III and IV rapids. Built for those who don't mind getting
+                        wet!
+                    </p>
+                </div>
+            </article>
+
+            <article class="card">
+                <img src="images/trip3.jpg" alt="Overnight Wilderness">
+                <div>
+                    <h3>Overnight Wilderness</h3>
+                    <p>Raft by day, camp under the stars by night. The ultimate Montana escape.</p>
+                </div>
+            </article>
         </div>
 
-        <section style="width: 100%;">
+        <section>
             <h2>Trip Comparison</h2>
             <table>
                 <thead>
@@ -107,22 +91,21 @@
             </table>
         </section>
 
-        <section class="trip-cta">
+        <section class="cta-box">
             <h2>Ready for the Water?</h2>
             <p>Spaces fill up fast during the summer season!</p>
-            <a href="contact.html"
-              style="font-weight:bold; color:var(--primary-color); font-size: 1.2rem;">Contact Us to
-                Book Your Spot</a>
+            <a href="contact.html" class="cta-button">Contact Us to Book Your Spot</a>
         </section>
     </main>
+
     <footer>
         <p>© 2026 🏞️ Whitefish White Water Rafting 🛶 Philip Bredsguard</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com"><img src="images/facebook-square.svg"
-                  alt="Facebook"></a>
-            <a href="https://x.com"><img src="images/x-bw.svg" alt="X.com"></a>
+                  alt="Facebook Logo"></a>
+            <a href="https://x.com"><img src="images/x-bw.svg" alt="X.com Logo"></a>
             <a href="https://www.instagram.com"><img src="images/instagram-square.svg"
-                  alt="Instagram"></a>
+                  alt="Instagram Logo"></a>
         </nav>
     </footer>
 </body>
