--- a/wwr/index.html
+++ b/wwr/index.html
@@ -28,6 +28,7 @@
             <img src="images/hero-home.jpg" alt="Rafting on the Flathead River">
             <h1>Adventure of a Lifetime</h1>
             <article>
+                <h2>About Our Adventures</h2>
                 <p>Unforgettable white water experiences in the heart of Montana. Whether you're a
                     beginner or a pro, we have a splash for you.</p>
                 <a href="trips.html"
