--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Whitefish White Water Rafting</title>
+    <title>Home Page | Whitefish White Water Rafting</title>
     <meta name="description"
       content="Experience the thrill of Montana's rivers with Whitefish White Water Rafting. Book your adventure today!">
     <meta name="author" content="Philip Bredsguard">
