--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,18 +24,19 @@
         </nav>
     </header>
     <main>
+        <section class="contact-header">
+            <h1>Whitefish White Water Rafting</h1>
+            <address>
+                1234 Main River Street<br>
+                Whitefish, Montana<br>
+                +1 (999) 999-9999<br>
+                <a
+                  href="mailto:info@whitefishwhitewaterrafting.com">info@whitefishwhitewaterrafting.com</a>
+            </address>
+        </section>
+
         <div class="contact-container">
-            <section class="contact-info">
-                <h1>Whitefish White Water Rafting</h1>
-
-                <address>
-                    1234 Main River Street<br>
-                    Whitefish, Montana<br>
-                    +1 (999) 999-9999<br>
-                    <a
-                      href="mailto:info@whitefishwhitewaterrafting.com">info@whitefishwhitewaterrafting.com</a>
-                </address>
-
+            <section class="map-wrapper">
                 <div class="map-container">
                     <iframe
                       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215542.52412419295!2d-114.53311380702434!3d48.42965265937803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536669ab14afecb5%3A0xccca7a6b8837463e!2sWhitefish%2C%20MT%2059937!5e1!3m2!1sen!2sus!4v1770503655339!5m2!1sen!2sus"
